[tool.poetry]
name = "watcher"
version = "0.0.4"
description = "A small tool that is waiting for the specific docker image to be rolled out"
authors = ["Vadim Gedz <vadims@linux-tech.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
tenacity = "^8.0.1"
psycopg2-binary = "^2.9.3"
expiringdict = "^1.2.1"
prometheus-client = "^0.13.1"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
responses = "^0.20.0"

[tool.poetry.scripts]
argo-watcher = "watcher.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
